--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "chai": "^4.3.7",
+    "chromedriver": "^114.0.2",
+    "mocha": "^10.2.0",
     "selenium-webdriver": "^4.10.0"
   },
   "type": "module"
